# Projet_1_BooksToScrape

./: .gitignore  README.md  book.py  categories.py  category.py  main.py  pyproject.toml  requirements.txt  utils.py
